<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_clips_cli</name>
  <version>0.0.0</version>
  <description>Interactive CLIPS CLI over ROS 2 services</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>Apache-2.0</license>


  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>cx_msgs</depend>

  <exec_depend>python3-prompt-toolkit</exec_depend>
  <exec_depend>python3-pygments</exec_depend>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
